label element inside index.html for attribute value added

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <title>Frontend Mentor | Age calculator app</title>
   </head>
   <body>
-    <main class="container" role="main">
+    <main class="container">
       <div class="age__calculator">
         <div class="input__container">
           <div class="input__box">
-            <label for="">DAY</label>
+            <label for="day-value">DAY</label>
             <input type="text" placeholder="DD" id="day-value"/>
             <span class="input__error"> </span>
           </div>
           <div class="input__box">
-            <label for="">MONTH</label>
+            <label for="month-value">MONTH</label>
             <input type="text" placeholder="MM" id="month-value"/>
             <span class="input__error"> </span>
           </div>
           <div class="input__box">
-            <label for="">YEAR</label>
+            <label for="year-value">YEAR</label>
             <input type="text" placeholder="YYYY" id="year-value"/>
             <span class="input__error"> </span>
           </div>
