--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
         </div>
         <div class="age__display">
           <div class="year__display">
-            <span class="number" id="years-count">
-              <span class="number__dash__line"></span>
-              <span class="number__dash__line"></span>
-            </span>
-            <span class="text">years</span>
+            <div class="number" id="years-count">
+              <span class="dash__line">--</span>
+              <span class="dash__line">--</span>
+            </div>
+            <p class="text">years</p>
           </div>
           <div class="month__display">
-            <span class="number" id="months-count">
-              <span class="number__dash__line"></span>
-              <span class="number__dash__line"></span>
-            </span>
-            <span class="text">months</span>
+            <div class="number" id="months-count">
+              <span class="dash__line">--</span>
+              <span class="dash__line">--</span>
+            </div>
+            <p class="text">months</p>
           </div>
           <div class="day__display">
-            <span class="number" id="days-count">
-              <span class="number__dash__line"></span>
-              <span class="number__dash__line"></span>
-            </span>
-            <span class="text">days</span>
+            <div class="number" id="days-count">
+              <span class="dash__line">--</span>
+              <span class="dash__line">--</span>
+            </div>
+            <p class="text">days</p>
           </div>
         </div>
       </div>
